[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mundo.gd" type="Script" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://imagen para godot/fondo.png" type="Texture" id=5]
[ext_resource path="res://Sonidos/Muerte.wav" type="AudioStream" id=6]
[ext_resource path="res://Sonidos/StageMusica.wav" type="AudioStream" id=7]
[ext_resource path="res://Sonidos/Ready.wav" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.39001, -2.07245, 0, 0, 0, 0, 1020.58, -0.290649, 0, 0, 0, 0, 1022.36, 600.175, 0, 0, 0, 0, 1.39001, 598.393, 0, 0, 0, 0, -0.391785, -2.07245, 0, 0, 0, 0, 1.39001, -2.07245 )
}

[node name="Mundo" type="Node2D"]
script = ExtResource( 3 )
roca = ExtResource( 2 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="RocaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="IniciarTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PosicionInicio" type="Position2D" parent="."]
position = Vector2( 504.249, 311.815 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="posicionRoca" type="PathFollow2D" parent="Camino"]
position = Vector2( 1.39001, -2.07245 )
rotation = 0.00174815

[node name="Interfaz" parent="." instance=ExtResource( 4 )]

[node name="Muerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 1.04

[node name="MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Ready" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="golpeRecibido" from="Player" to="." method="gameOver"]
[connection signal="timeout" from="RocaTimer" to="." method="_on_RocaTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="IniciarTimer" to="." method="_on_IniciarTimer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevoJuego"]
